Changed tests and added integration with Test Rail

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "chance": "^1.0.18",
-    "cypress": "^3.2.0"
+    "cypress": "3.4.0",
+    "cypress-testrail-accumulative-reporter": "^1.1.4"
   }
 }
